Splash screen and app icon.

--- a/app-src/public/index.html
+++ b/app-src/public/index.html
@@ -5,6 +5,7 @@
     <title>SVG Animation Assistant</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link rel="icon" type="image/png" href="icon.png" />
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
