--- a/index.html
+++ b/index.html
@@ -2,11 +2,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SVG Animation Assistant</title>
+    <title>SVG Flipbook - Inkscape SVG flipbook layer animation</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link rel="icon" type="image/png" href="icon.png" />
+    <link rel="icon" type="image/png" href="icon.png"/>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <meta name="description" content="Inkscape animation online app for flipbook-style layer animation."/>
+
+    <!-- social -->
+    <meta content="https://svgflipbook.com/icon.png" name="twitter:image:src">
+    <meta content="@mccrmx" name="twitter:site">
+    <meta content="@mccrmx" name="twitter:creator">
+    <meta content="summary" name="twitter:card">
+    <meta content="SVG Flipbook" name="twitter:title">
+    <meta content="Inkscape SVG animation online app for flipbook-style layer animation." name="twitter:description">
+
+    <meta content="https://svgflipbook.com/icon.png" property="og:image">
+    <meta content="SVG Flipbook" property="og:site_name">
+    <meta content="website" property="og:type">
+    <meta content="SVG Flipbook" property="og:title">
+    <meta content="https://svgflipbook.com/" property="og:url">
+    <meta content="Inkscape SVG animation online app for flipbook-style layer animation." property="og:description">
   </head>
   <body>
     <div id="app">
